--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <img src="resources/respressologo.PNG" alt="respresso-logo">
+                <a href="./index.html" target="_blank">
+                    <img src="resources/respressologo.PNG" alt="respresso-logo">
+                </a>
             </div>
         </div>
 
@@ -25,9 +27,9 @@
         </div>
         
         <div class="nav-links">
-            <a href="#" target="_blank">Cafenea</a>
-            <a href="#" target="_blank">Produse</a>
-            <a href="#" target="_blank">Contact</a>
+            <a href="./cafenea.html" target="_blank">Cafenea</a>
+            <a href="./produse.html" target="_blank">Produse</a>
+            <a href="./contact.html" target="_blank">Contact</a>
         </div>
     </div>
 
@@ -37,15 +39,15 @@
             Cafeaua Respresso
             </h2>
             <p>
-            Cafeaua noastra este renumita pentru gustul ei unic si plin de energie. Daca doresti sa incerci ceva nou,comanda acum online, sau la noi in local!
+            Cafeaua noastra este renumită pentru gustul ei unic și plin de energie. Dacă dorești să încerci ceva nou, comandă acum online, sau la noi in local!
             </p>
         </div>
         <div class="grid-img">
-            <img src="https://media.istockphoto.com/id/1145612951/photo/how-to-make-coffee-latte-art.jpg?s=170667a&w=0&k=20&c=1cefWb2tO-505kBGpsVOwmPSr8WOa-PW6gZmG0jftEA=" alt="Coffee latte art" width="400" height="300">
+            <img src="./resources/latte-art-index.jpg" alt="Coffee latte art">
         </div>
 
         <div class="grid-img" id="inversed-responsive-img">
-            <img src="https://cdn.create.vista.com/api/media/medium/344072666/stock-photo-selective-focus-fresh-roasted-coffee?token=" alt="">
+            <img src="./resources/sac-boabe-index.jfif" alt="Boabe de cafea">
         </div>
 
         <div class="grid-text" id="inversed-responsive-text">
@@ -53,20 +55,20 @@
             Gustul care nu se uita
             </h2>
             <p>
-            Exploreaza cafelele noastre - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            De la măcinarea și prepararea boabelor de cafea, până la amestecarea si procesul de artă latte, noi punem pasiune și dedicare. Ia parte și tu din cei peste 150 de clienți zilnici care vin mereu în localul nostru pentru a bea <i>cea mai savuroasă cafea din oraș</i> - dupa spusele lor. 
             </p>
         </div>
         
-        <div class="grid-text">
+        <div class="grid-text" id="inversed-responsive-text2">
             <h2>
             Unde ne gasesti
             </h2>
             <p>
-                Ceva despre noi / contact - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Dacă dorești să faci o vizită localului nostru - ne găsești în <a href="https://goo.gl/maps/iMsKLkZw8gxu8rDH9">Oradea, pe strada Crinului, 9</a>. Pentru a obține mai multe detalii despre noi, sună la <a href="tel:+40748123123">0748 123 123</a>, sau trimite un email către <a href="mailto:clienti@respresso.com">clienti@respresso.com</a>
             </p>
         </div>  
-        <div class="grid-img">
-            <img src="https://64.media.tumblr.com/26c22b8d44cdb7e05c4ce08a010a9cc6/acf5a870c069860e-1d/s640x960/803306fd7e7715c50432e774c49afad686441f7f.jpg" alt="" width="400" height="300">
+        <div class="grid-img" id="inversed-responsive-img2">
+            <img src="./resources/coffee-bar.jpg" alt="Local cafenea">
         </div>
     </div>
 </body>
