--- a/cafeaboabe.html
+++ b/cafeaboabe.html
@@ -12,7 +12,9 @@
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <img src="resources/respressologo.PNG" alt="respresso-logo">
+                <a href="./index.html" target="_blank">
+                    <img src="resources/respressologo.PNG" alt="respresso-logo">
+                </a>
             </div>
         </div>
 
@@ -25,9 +27,9 @@
         </div>
         
         <div class="nav-links">
-            <a href="#" target="_blank">Cafenea</a>
-            <a href="#" target="_blank">Produse</a>
-            <a href="#" target="_blank">Contact</a>
+            <a href="./cafenea.html" target="_blank">Cafenea</a>
+            <a href="./produse.html" target="_blank">Produse</a>
+            <a href="./contact.html" target="_blank">Contact</a>
         </div>
     </div>
     <div class="grid-content">
