--- a/cafenea.html
+++ b/cafenea.html
@@ -7,12 +7,13 @@
     <title>Respresso | Cafenea</title>
     <link rel="stylesheet" href="./cafenea.css">
     <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <a href="./index.html" target="_blank">
+                <a href="./index.html" target="_self">
                     <img src="resources/respressologo.PNG" alt="respresso-logo">
                 </a>
             </div>
@@ -27,24 +28,39 @@
         </div>
         
         <div class="nav-links">
-            <a href="./cafenea.html" target="_blank">Cafenea</a>
-            <a href="./produse.html" target="_blank">Produse</a>
-            <a href="./contact.html" target="_blank">Contact</a>
+            <a href="./cafenea.html" target="_self">Cafenea</a>
+            <a href="./produse.html" target="_self">Produse</a>
+            <a href="./contact.html" target="_self">Contact</a>
+            <a href="./" target="_self" class="fa fa-home"></a>
+        </div>
+        
+        <div class="popup">
+            <ul>
+                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <span></span>
+                <li><a href="./produse.html" target="_self">Produse</a></li>
+                <span></span>
+                <li><a href="./contact.html" target="_self">Contact</a></li>
+            </ul>
         </div>
     </div>
 
     <video id="background-video" autoplay="" loop="" muted="" src="./resources/broll.mp4" playsinline=""></video>
 
-    <div class="text-prompt">
+    <div class="text-prompt transition-in">
         <!-- <h1>Viziunea noastră</h1> -->
         <h2>Cafea făcută cu pasiune, de oameni pasionați pentru clienți pasionați.</h2>
-        Vrem sa creăm cea mai bună cafea, dar și o comunitate de oameni care își urmeaza visurile, în jurul si cu ajutorul cafelei noastre.</p>
+        Viziunea noastra este de a oferi o experiență de cafea savuroasă și de a împărtăși pasiunea noastră pentru 
+        această băutură cu toți cei care ne trec pragul. Vrem să fim locul în care oamenii se pot întâlni, socializa și savura o 
+        cafea de calitate, într-un mediu confortabil și primitor. Ne dorim să devenim locul de întâlnire al 
+        comunității locale și să încurajăm oamenii să-și împărtășească ideile și visele în timp ce se bucură de o cafea delicioasă. 
+        Vrem să fim mai mult decât doar o cafenea!
         <h1 style="margin-top: 35px;">Echipa noastră</h1>
     </div>
 
-    <div class="grid-content">
+    <div class="grid-content transition-in">
         <div class="image-and-title">
-            <img src="./resources/ceo.jpg" alt="">
+            <img src="./resources/ceo.jpg" alt="">  
             <h3>Fondator</h3>
         </div>
 
@@ -65,10 +81,13 @@
 
     </div>
 
-    <div class="button">
-        <input type="submit" id="submit" name="submit" value="ALĂTURĂ-TE"><br>
-        echipei noastre
+    <div class="button transition-in">
+        <form action="./cariere.html">
+            <input type="submit" id="submit" name="submit" value="ALĂTURĂ-TE"><br>
+            echipei noastre
+        </form>
     </div>
 </body>
 <script src="./navbar.js"></script>
+<script src="./transitions.js"></script>
 </html>
