--- a/cariere.html
+++ b/cariere.html
@@ -7,12 +7,13 @@
     <title>Respresso | Cariere</title>
     <link rel="stylesheet" href="./cariere.css">
     <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <a href="./index.html" target="_blank">
+                <a href="./index.html" target="_self">
                     <img src="resources/respressologo.PNG" alt="respresso-logo">
                 </a>
             </div>
@@ -27,9 +28,20 @@
         </div>
         
         <div class="nav-links">
-            <a href="./cafenea.html" target="_blank">Cafenea</a>
-            <a href="./produse.html" target="_blank">Produse</a>
-            <a href="./contact.html" target="_blank">Contact</a>
+            <a href="./cafenea.html" target="_self">Cafenea</a>
+            <a href="./produse.html" target="_self">Produse</a>
+            <a href="./contact.html" target="_self">Contact</a>
+            <a href="./" target="_self" class="fa fa-home"></a>
+        </div>
+
+        <div class="popup">
+            <ul>
+                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <span></span>
+                <li><a href="./produse.html" target="_self">Produse</a></li>
+                <span></span>
+                <li><a href="./contact.html" target="_self">Contact</a></li>
+            </ul>
         </div>
     </div>
 
