--- a/cafeaboabe.html
+++ b/cafeaboabe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produse | Respresso</title>    
+    <title>Respresso | Cafea boabe</title>    
     <link rel="stylesheet" href="./navbar.css">    
     <link rel="stylesheet" href="./cafeaboabe.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
