--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
         <div class="grid-text transition-in" id="inversed-responsive-text2">
             <h2>
-            Unde ne gasesti
+            Unde ne găsești
             </h2>
             <p>
             Dacă dorești să faci o vizită localului nostru - ne găsești în <a href="https://goo.gl/maps/iMsKLkZw8gxu8rDH9">Oradea, pe strada Crinului, 9</a>. Pentru a obține mai multe detalii despre noi, sună la <a href="tel:+40748123123">0748 123 123</a>, sau trimite un email către <a href="mailto:clienti@respresso.com">clienti@respresso.com</a>
