--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             Cafeaua Respresso
             </h2>
             <p>
-            Mai mult decat o cafea - cafeaua Respresso adună oameni în jurul ei și îi ajută să își împlinească visele!
+            Mai mult decât o cafea - cafeaua Respresso adună oameni în jurul ei și îi ajută să își împlinească visele!
             Dacă dorești să încerci ceva nou, comandă acum online, sau la noi in local!
             </p>
         </div>
@@ -65,7 +65,7 @@
 
         <div class="grid-text transition-in" id="inversed-responsive-text">
             <h2>
-            Gustul care nu se uita
+            Gustul care nu se uită
             </h2>
             <p>
             De la măcinarea și prepararea boabelor de cafea, până la amestecarea si procesul de artă latte, noi punem pasiune și dedicare. Ia parte și tu din cei peste 150 de clienți zilnici care vin mereu în localul nostru pentru a bea <i>cea mai savuroasă cafea din oraș</i> - dupa spusele lor. 
