--- a/gustari.html
+++ b/gustari.html
@@ -17,7 +17,7 @@
                 </a>
             </div>
         </div>
-
+        
         <div class="nav-btn">
             <label for="nav-check">
             <span></span>
@@ -30,8 +30,20 @@
             <a href="./cafenea.html" target="_self">Cafenea</a>
             <a href="./produse.html" target="_self">Produse</a>
             <a href="./contact.html" target="_self">Contact</a>
+            <a href="./" target="_self" class="fa fa-home"></a>
+        </div>
+
+        <div class="popup">
+            <ul>
+                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <span></span>
+                <li><a href="./produse.html" target="_self">Produse</a></li>
+                <span></span>
+                <li><a href="./contact.html" target="_self">Contact</a></li>
+            </ul>
         </div>
     </div>
+
     <div class="grid-content">
         <div class="card">
             <img src="./resources/croissantunt.png" alt="croissant cu unt">
@@ -66,5 +78,6 @@
         </div>
     </div>
 </body>
+<script src="./transitions.js"></script>
 <script src="./navbar.js"></script>
 </html>
