--- a/produse.html
+++ b/produse.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
         </div>
-
+        
         <div class="nav-btn">
             <label for="nav-check">
             <span></span>
@@ -33,7 +33,18 @@
             <a href="./contact.html" target="_self">Contact</a>
             <a href="./" target="_self" class="fa fa-home"></a>
         </div>
+
+        <div class="popup">
+            <ul>
+                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <span></span>
+                <li><a href="./produse.html" target="_self">Produse</a></li>
+                <span></span>
+                <li><a href="./contact.html" target="_self">Contact</a></li>
+            </ul>
+        </div>
     </div>
+
     <div class="grid-content">
         <div class="card transition-in">
             <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Roasted_Coffee_Beans_Texture.jpg" alt="">
