--- a/cafenea.html
+++ b/cafenea.html
@@ -45,10 +45,9 @@
         </div>
     </div>
 
-    <video id="background-video" autoplay="" loop="" muted="" src="./resources/broll.mp4" playsinline=""></video>
+    <video id="background-video" autoplay loop muted src="./resources/broll.mp4" playsinline></video>
 
     <div class="text-prompt transition-in">
-        <!-- <h1>Viziunea noastră</h1> -->
         <h2>Cafea făcută cu pasiune, de oameni pasionați pentru clienți pasionați.</h2>
         Viziunea noastra este de a oferi o experiență de cafea savuroasă și de a împărtăși pasiunea noastră pentru 
         această băutură cu toți cei care ne trec pragul. Vrem să fim locul în care oamenii se pot întâlni, socializa și savura o 
