--- a/cafeaboabe.html
+++ b/cafeaboabe.html
@@ -30,7 +30,7 @@
         
         <div class="nav-links">
             <a href="./cafenea.html" target="_self">Cafenea</a>
-            <a href="./produse.html" target="_self">Produse</a>
+            <a href="./produse.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Produse</a>
             <a href="./contact.html" target="_self">Contact</a>
             <a href="./" target="_self" class="fa fa-home"></a>
         </div>
@@ -39,7 +39,7 @@
             <ul>
                 <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
                 <span></span>
-                <li><a href="./produse.html" target="_self">Produse</a></li>
+                <li><a href="./produse.html" target="_self" style="color: #152f57;">Produse</a></li>
                 <span></span>
                 <li><a href="./contact.html" target="_self">Contact</a></li>
             </ul>
