--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <div class="nav-links">
             <a href="./cafenea.html" target="_self">Cafenea</a>
             <a href="./produse.html" target="_self">Produse</a>
-            <a href="./contact.html" target="_self">Contact</a>
+            <a href="./contact.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Contact</a>
             <a href="./" target="_self" class="fa fa-home"></a>
         </div>
 
@@ -40,24 +40,24 @@
                 <span></span>
                 <li><a href="./produse.html" target="_self">Produse</a></li>
                 <span></span>
-                <li><a href="./contact.html" target="_self">Contact</a></li>
+                <li><a href="./contact.html" target="_self" style="color: #152f57;">Contact</a></li>
             </ul>
         </div>
     </div>
 
-    <h1 style="margin-top: 80px;">Contactează-ne la</h1>
+    <h1 style="margin-top: 80px;">Contactează-ne la:</h1>
     <div class="contact-details transition-in">
         <a href="tel:+40748123123">0748 123 123</a><br>
         <a href="mailto:clienti@respresso.com">clienti@respresso.com</a><br>
         <a href="https://www.facebook.com/" class="fa fa-facebook"></a> &nbsp;
         <a href="https://www.instagram.com" class="fa fa-instagram"></a>
     </div>
-    <h1>Vino în localul nostru</h1>
+    <h1>Vino în localul nostru:</h1>
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2718.477897201389!2d21.933827!3d47.050475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x98610bf934768e11!2zNDfCsDAzJzAxLjciTiAyMcKwNTYnMDEuOCJF!5e0!3m2!1sro!2sro!4v1671613917517!5m2!1sro!2sro" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    <h1>Sau comandă online</h1>
+    <h1>Sau comandă online:</h1>
     <div class="grid-content">
         <div class="card transition-in">
             <img src="./resources/glovo.png" alt="">
