--- a/cafenea.html
+++ b/cafenea.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="button transition-in">
-        <form action="./cariere.html">
+        <form action="./cafenea/cariere.html">
             <input type="submit" id="submit" name="submit" value="ALĂTURĂ-TE"><br>
             echipei noastre
         </form>
