--- a/produse.html
+++ b/produse.html
@@ -52,7 +52,7 @@
                 <b>Cafea - boabe</b>
                 <p>Poți avea parte de gustul cafelei Respresso chiar in casa ta! Cumpără acum boabele de cafea folosite in prepararea cafelelor noastre.</p>
                 <div class="button">
-                    <form action="./cafeaboabe.html">
+                    <form action="./produse/cafeaboabe.html">
                         <input type="submit" id="submit" name="submit" value="DESCOPERĂ"><br>
                     </form>
                 </div>
@@ -65,7 +65,7 @@
                 <b>Cafea - băuturi</b>
                 <p>Descoperă gustul băuturilor noastre de cafea, potrivite pentru orice sezon, care pot fi luate din localul nostru sau comandate online! </p>
                 <div class="button">
-                    <form action="./cafeabauturi.html">
+                    <form action="./produse/cafeabauturi.html">
                         <input type="submit" id="submit" name="submit" value="DESCOPERĂ"><br>
                     </form>
                 </div>
@@ -78,7 +78,7 @@
                 <b>Gustări</b>
                 <p>Îți place să bei cafeaua împreună cu o gustare? Alege ceea ce crezi tu că ți se potrivește: de la croissanturi sărate până la biscuiți cu ciocolată.</p>
                 <div class="button">
-                    <form action="./gustari.html">
+                    <form action="./produse/gustari.html">
                         <input type="submit" id="submit" name="submit" value="DESCOPERĂ"><br>
                     </form>
                 </div>
