--- a/cafenea/cariere.html
+++ b/cafenea/cariere.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Respresso | Cariere</title>
     <link rel="stylesheet" href="./cariere.css">
-    <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <a href="./index.html" target="_self">
-                    <img src="resources/respressologo.PNG" alt="respresso-logo">
+                <a href="../index.html" target="_self">
+                    <img src="../resources/respressologo.PNG" alt="respresso-logo">
                 </a>
             </div>
         </div>
@@ -28,19 +28,19 @@
         </div>
         
         <div class="nav-links">
-            <a href="./cafenea.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Cafenea</a>
-            <a href="./produse.html" target="_self">Produse</a>
-            <a href="./contact.html" target="_self">Contact</a>
-            <a href="./" target="_self" class="fa fa-home"></a>
+            <a href="../cafenea.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Cafenea</a>
+            <a href="../produse.html" target="_self">Produse</a>
+            <a href="../contact.html" target="_self">Contact</a>
+            <a href="../" target="_self" class="fa fa-home"></a>
         </div>
 
         <div class="popup">
             <ul>
-                <li><a href="./cafenea.html" target="_self" style="color: #152f57;">Cafenea</a></li>
+                <li><a href="../cafenea.html" target="_self" style="color: #152f57;">Cafenea</a></li>
                 <span></span>
-                <li><a href="./produse.html" target="_self">Produse</a></li>
+                <li><a href="../produse.html" target="_self">Produse</a></li>
                 <span></span>
-                <li><a href="./contact.html" target="_self">Contact</a></li>
+                <li><a href="../contact.html" target="_self">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -59,5 +59,5 @@
         <input type="submit" id="submit" name="submit" value="TRIMITE"><br>
     </form>
 </body>
-<script src="./navbar.js"></script>
+<script src="../navbar.js"></script>
 </html>
