--- a/produse/cafeabauturi.html
+++ b/produse/cafeabauturi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Respresso | Cafea</title>    
-    <link rel="stylesheet" href="./navbar.css">    
+    <link rel="stylesheet" href="../navbar.css">    
     <link rel="stylesheet" href="./cafeabauturi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -13,8 +13,8 @@
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <a href="./index.html" target="_self">
-                    <img src="resources/respressologo.PNG" alt="respresso-logo">
+                <a href="../index.html" target="_self">
+                    <img src="../resources/respressologo.PNG" alt="respresso-logo">
                 </a>
             </div>
         </div>
@@ -28,26 +28,26 @@
         </div>
         
         <div class="nav-links">
-            <a href="./cafenea.html" target="_self">Cafenea</a>
-            <a href="./produse.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Produse</a>
-            <a href="./contact.html" target="_self">Contact</a>
-            <a href="./" target="_self" class="fa fa-home"></a>
+            <a href="../cafenea.html" target="_self">Cafenea</a>
+            <a href="../produse.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Produse</a>
+            <a href="../contact.html" target="_self">Contact</a>
+            <a href="../" target="_self" class="fa fa-home"></a>
         </div>
 
         <div class="popup">
             <ul>
-                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <li><a href="../cafenea.html" target="_self">Cafenea</a></li>
                 <span></span>
-                <li><a href="./produse.html" target="_self" style="color: #152f57;">Produse</a></li>
+                <li><a href="../produse.html" target="_self" style="color: #152f57;">Produse</a></li>
                 <span></span>
-                <li><a href="./contact.html" target="_self">Contact</a></li>
+                <li><a href="../contact.html" target="_self">Contact</a></li>
             </ul>
         </div>
     </div>
 
     <div class="grid-content">
         <div class="card transition-in">
-            <img src="./resources/latte.jpeg" alt="">
+            <img src="../resources/latte.jpeg" alt="">
             <div class="container">
                 <b>Cafea Latte</b>
                 <p>Preparată din espresso și lapte fierbinte, în care se adaugă spumă de lapte deasupra. Adițional, se pot adăuga siropuri de diferite arome.</p>
@@ -55,7 +55,7 @@
         </div>
         
         <div class="card transition-in">
-            <img src="./resources/americano.jpeg" alt="">
+            <img src="../resources/americano.jpeg" alt="">
             <div class="container">
                 <b>Cafea Americano</b>
                 <p>Aroma puternică de cafea se resimte extrem de bine în aceasta cafeauă preparată din espresso diluat cu apă fierbinte</p>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="card transition-in">
-            <img src="./resources/mocha.jpeg" alt="">
+            <img src="../resources/mocha.jpeg" alt="">
             <div class="container">
                 <b>Cafea Mocha</b>
                 <p>Gustul dulce al ciocolății topită oferă o aromă unica cafelei preparate din espresso și lapte</p>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="card transition-in">
-            <img src="./resources/espresso.jpeg" alt="">
+            <img src="../resources/espresso.jpeg" alt="">
             <div class="container">
                 <b>Espresso</b>
                 <p>Preparată prin extracția rapidă a apei prin boabele de cafea măcinate fin, care sunt apoi împachetate într-o cantitate mică de cafea concentrată.</p>
@@ -79,7 +79,7 @@
         </div>
 
          <div class="card transition-in">
-            <img src="./resources/espressomacchiato.jpeg" alt="">
+            <img src="../resources/espressomacchiato.jpeg" alt="">
             <div class="container">
                 <b>Espresso Machiatto</b>
                 <p>Menține în mare parte gustul puternic al cafelei espresso, întărită de spuma de lapte delicată</p>
@@ -87,7 +87,7 @@
         </div>
 
          <div class="card transition-in">
-            <img src="./resources/cappuccino.jpeg" alt="">
+            <img src="../resources/cappuccino.jpeg" alt="">
             <div class="container">
                 <b>Cappucino</b>
                 <p>Conține balanțul perfect dintre cantitatea de cafea si lapte fierbinte, dar are mai puțină spumă decât cafeaua latte.</p>
@@ -95,6 +95,6 @@
         </div>
     </div>
 </body>
-<script src="./navbar.js"></script>
-<script src="./transitions.js"></script>
+<script src="../navbar.js"></script>
+<script src="../transitions.js"></script>
 </html>
