--- a/produse/gustari.html
+++ b/produse/gustari.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Respresso | Gustari</title>    
-    <link rel="stylesheet" href="./navbar.css">    
+    <link rel="stylesheet" href="../navbar.css">    
     <link rel="stylesheet" href="./gustari.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
-                <a href="./index.html" target="_self">
-                    <img src="resources/respressologo.PNG" alt="respresso-logo">
+                <a href="../index.html" target="_self">
+                    <img src="../resources/respressologo.PNG" alt="respresso-logo">
                 </a>
             </div>
         </div>
@@ -27,26 +28,26 @@
         </div>
         
         <div class="nav-links">
-            <a href="./cafenea.html" target="_self">Cafenea</a>
-            <a href="./produse.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Produse</a>
-            <a href="./contact.html" target="_self">Contact</a>
-            <a href="./" target="_self" class="fa fa-home"></a>
+            <a href="../cafenea.html" target="_self">Cafenea</a>
+            <a href="../produse.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Produse</a>
+            <a href="../contact.html" target="_self">Contact</a>
+            <a href="../" target="_self" class="fa fa-home"></a>
         </div>
 
         <div class="popup">
             <ul>
-                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <li><a href="../cafenea.html" target="_self">Cafenea</a></li>
                 <span></span>
-                <li><a href="./produse.html" target="_self" style="color: #152f57;">Produse</a></li>
+                <li><a href="../produse.html" target="_self" style="color: #152f57;">Produse</a></li>
                 <span></span>
-                <li><a href="./contact.html" target="_self">Contact</a></li>
+                <li><a href="../contact.html" target="_self">Contact</a></li>
             </ul>
         </div>
     </div>
 
     <div class="grid-content">
         <div class="card">
-            <img src="./resources/croissantunt.png" alt="croissant cu unt">
+            <img src="../resources/croissantunt.png" alt="croissant cu unt">
             <div class="container">
                 <b>Croissant cu unt</b>
                 <p>Croissantul cu unt este o delicatesă de patiserie franțuzească care se bucură de mare popularitate în întreaga lume. Acesta este obținut din aluat fraged, răsucit și copt, care este apoi umplut cu unt proaspăt.</p>
@@ -54,7 +55,7 @@
         </div>
         
         <div class="card">
-            <img src="./resources/croissantcioco.png" alt="croissant cu ciocolata">
+            <img src="../resources/croissantcioco.png" alt="croissant cu ciocolata">
             <div class="container">
                 <b>Croissant cu ciocolata</b>
                 <p>Croissantul cu ciocolată este o variantă delicioasă a clasicului croissant franțuzesc. Este o opțiune perfectă pentru cei care îndrăgesc ciocolata și doresc să încerce ceva nou și delicios. </p>
@@ -62,7 +63,7 @@
         </div>
 
         <div class="card">
-            <img src="./resources/biscuite.png" alt="biscuite cu ciocolata">
+            <img src="../resources/biscuite.png" alt="biscuite cu ciocolata">
             <div class="container">
                 <b>Biscuite</b>
                 <p>Biscuiții cu ciocolată sunt delicioși biscuiți dulci, cu o crustă crocantă și umpluți cu ciocolată. Este o gustare dulce și delicioasă pentru toate vârstele.</p>
@@ -70,7 +71,7 @@
         </div>
 
         <div class="card">
-            <img src="./resources/chec.png" alt="chec cu banane">
+            <img src="../resources/chec.png" alt="chec cu banane">
             <div class="container">
                 <b>Chec cu banane</b>
                 <p>Checul cu banane poate fi savurat de dimineață, la micul dejun, dar este deosebit de bun și ca o gustare după-amiaza, împreună cu o ceașcă de cafea. Este o opțiune delicioasă și sănătoasă pentru cei care îndrăgesc bananele și doresc să încerce ceva nou.</p>
@@ -78,6 +79,6 @@
         </div>
     </div>
 </body>
-<script src="./transitions.js"></script>
-<script src="./navbar.js"></script>
+<script src="../transitions.js"></script>
+<script src="../navbar.js"></script>
 </html>
