--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         </div>
         
         <div class="nav-links">
-            <a href="./cafenea.html" target="_self">Cafenea</a>
+            <a href="./echipa.html" target="_self">Echipă</a>
             <a href="./produse.html" target="_self">Produse</a>
             <a href="./contact.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Contact</a>
             <a href="./" target="_self" class="fa fa-home"></a>
@@ -36,7 +36,7 @@
 
         <div class="popup">
             <ul>
-                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <li><a href="./echipa.html" target="_self">Echipă</a></li>
                 <span></span>
                 <li><a href="./produse.html" target="_self">Produse</a></li>
                 <span></span>
