--- a/echipa.html
+++ b/echipa.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Respresso | Cafenea</title>
-    <link rel="stylesheet" href="./cafenea.css">
+    <link rel="stylesheet" href="./echipa.css">
     <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="nav" id="navbar">
+    <header class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
                 <a href="./index.html" target="_self">
@@ -27,23 +27,23 @@
             </label>
         </div>
         
-        <div class="nav-links">
-            <a href="./cafenea.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Cafenea</a>
+        <nav class="nav-links">
+            <a href="./echipa.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Echipă</a>
             <a href="./produse.html" target="_self">Produse</a>
             <a href="./contact.html" target="_self">Contact</a>
             <a href="./" target="_self" class="fa fa-home"></a>
-        </div>
+        </nav>
         
         <div class="popup">
             <ul>
-                <li><a href="./cafenea.html" target="_self" style="color: #152f57;">Cafenea</a></li>
+                <li><a href="./echipa.html" target="_self" style="color: #152f57;">Echipă</a></li>
                 <span></span>
                 <li><a href="./produse.html" target="_self">Produse</a></li>
                 <span></span>
                 <li><a href="./contact.html" target="_self">Contact</a></li>
             </ul>
         </div>
-    </div>
+    </header>
 
     <video id="background-video" autoplay loop muted src="./resources/broll.mp4" playsinline></video>
 
@@ -81,7 +81,7 @@
     </div>
 
     <div class="button transition-in">
-        <form action="./cafenea/cariere.html">
+        <form action="./echipa/cariere.html">
             <input type="submit" id="submit" name="submit" value="ALĂTURĂ-TE"><br>
             echipei noastre
         </form>
