--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="nav" id="navbar">
+    <header class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
                 <a href="./index.html" target="_self">
@@ -27,23 +27,23 @@
             </label>
         </div>
         
-        <div class="nav-links">
-            <a href="./cafenea.html" target="_self">Cafenea</a>
+        <nav class="nav-links">
+            <a href="./echipa.html" target="_self">Echipă</a>
             <a href="./produse.html" target="_self">Produse</a>
             <a href="./contact.html" target="_self">Contact</a>
             <a href="./" target="_self" class="fa fa-home"></a>
-        </div>
+        </nav>
 
         <div class="popup">
             <ul>
-                <li><a href="./cafenea.html" target="_self">Cafenea</a></li>
+                <li><a href="./echipa.html" target="_self">Echipă</a></li>
                 <span></span>
                 <li><a href="./produse.html" target="_self">Produse</a></li>
                 <span></span>
                 <li><a href="./contact.html" target="_self">Contact</a></li>
             </ul>
         </div>
-    </div>
+    </header>
 
     <div class="grid-content">
         <div class="grid-text transition-in">
