--- a/produse/cafeaboabe.html
+++ b/produse/cafeaboabe.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <div class="nav" id="navbar">
+    <header class="nav" id="navbar">
         <div class="nav-header">
             <div class="nav-title" id="respresso-logo">
                 <a href="../index.html" target="_self">
@@ -28,16 +28,16 @@
             </label>
         </div>
         
-        <div class="nav-links">
-            <a href="../cafenea.html" target="_self">Cafenea</a>
+        <nav class="nav-links">
+            <a href="../echipa.html" target="_self">Echipă</a>
             <a href="../produse.html" target="_self" style="text-decoration: underline; text-underline-offset:19px;">Produse</a>
             <a href="../contact.html" target="_self">Contact</a>
             <a href="../" target="_self" class="fa fa-home"></a>
-        </div>
+        </nav>
 
         <div class="popup">
             <ul>
-                <li><a href="../cafenea.html" target="_self">Cafenea</a></li>
+                <li><a href="../echipa.html" target="_self">Echipă</a></li>
                 <span></span>
                 <li><a href="../produse.html" target="_self" style="color: #152f57;">Produse</a></li>
                 <span></span>
@@ -45,7 +45,7 @@
             </ul>
         </div>
         
-    </div>
+    </header>
     <div class="grid-content">
         <div class="card">
             <img src="../resources/cb1.PNG" alt="">
