--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,11 @@
         </div>
     </div>
 
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
+
 </body>
 <script src="./navbar.js"></script>
 <script src="./transitions.js"></script>
