--- a/echipa.html
+++ b/echipa.html
@@ -86,6 +86,11 @@
             echipei noastre
         </form>
     </div>
+
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
 </body>
 <script src="./navbar.js"></script>
 <script src="./transitions.js"></script>
