--- a/echipa/cariere.html
+++ b/echipa/cariere.html
@@ -58,6 +58,11 @@
         <!-- <button>TRIMITE</button> -->
         <input type="submit" id="submit" name="submit" value="TRIMITE"><br>
     </form>
+
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
 </body>
 <script src="../navbar.js"></script>
 </html>
