--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             <img src="./resources/coffee-bar.jpg" alt="Local cafenea">
         </div>
     </div>
+
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
 </body>
 <script src="./navbar.js"></script>
 <script src="./transitions.js"></script>
