--- a/produse.html
+++ b/produse.html
@@ -85,6 +85,14 @@
             </div>
         </div>
     </div>
+    
+    <div class="fake">
+        
+    </div>
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
 </body>
 <script src="./navbar.js"></script>
 <script src="./transitions.js"></script>
