--- a/produse/cafeabauturi.html
+++ b/produse/cafeabauturi.html
@@ -94,6 +94,12 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
+    
 </body>
 <script src="../navbar.js"></script>
 <script src="../transitions.js"></script>
