--- a/produse/gustari.html
+++ b/produse/gustari.html
@@ -78,6 +78,12 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        Respresso © <br>
+        Devleoped by Efraim
+    </footer>
+    
 </body>
 <script src="../transitions.js"></script>
 <script src="../navbar.js"></script>
